change `MMapKV` as a stand-alone module

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -4,6 +4,7 @@ use_frameworks!
 
 target 'Storage_Example' do
   pod 'SQLiteORM', :path => '../../database'
+  pod 'MMapKV', :path => '../../mmapkv'
   pod 'Storage', :path => '../'
 
   target 'Storage_Tests' do
