--- a/Example/Podfile
+++ b/Example/Podfile
@@ -5,6 +5,7 @@ use_frameworks!
 target 'Storage_Example' do
   pod 'SQLiteORM', :path => '../../database'
   pod 'MMapKV', :path => '../../mmapkv'
+  pod 'Redisable', :path => '../../Redisable'
   pod 'Storage', :path => '../'
 
   target 'Storage_Tests' do
