--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,7 +1,7 @@
 
 platform :osx, '10.12'
 use_frameworks!
-install! 'cocoapods', generate_multiple_pod_projects: true
+#install! 'cocoapods', generate_multiple_pod_projects: true
 
 target 'Storage_Example' do
   pod 'SQLiteORM', :path => '../../SQLiteORM'
