--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,9 +1,10 @@
 
 platform :osx, '10.12'
 use_frameworks!
-#install! 'cocoapods', generate_multiple_pod_projects: true
+install!'cocoapods', :warn_for_unused_master_specs_repo => false
 
 target 'Storage_Example' do
+  pod 'AnyCoder', :path => '../../AnyCoder'
   pod 'SQLiteORM', :path => '../../SQLiteORM'
   pod 'MMapKV', :path => '../../MMapKV'
   pod 'Redisable', :path => '../../Redisable'
