--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,5 +1,5 @@
 
-platform :osx, '10.12'
+platform :osx, '10.13'
 use_frameworks!
 install!'cocoapods', :warn_for_unused_master_specs_repo => false
 
@@ -8,6 +8,7 @@ target 'Storage_Example' do
   pod 'SQLiteORM', :path => '../../SQLiteORM'
   pod 'MMapKV', :path => '../../MMapKV'
   pod 'Storage', :path => '../'
+  pod 'Runtime', :git => 'https://github.com/wickwirew/Runtime.git'
 
   target 'Storage_Tests' do
     inherit! :search_paths
