--- a/Example/Podfile
+++ b/Example/Podfile
@@ -7,12 +7,19 @@ target 'Storage_Example' do
   pod 'AnyCoder', :path => '../../AnyCoder'
   pod 'SQLiteORM', :path => '../../SQLiteORM'
   pod 'MMapKV', :path => '../../MMapKV'
-  pod 'Storage', :path => '../'
+  pod 'Storage.Redisable', :path => '../'
   pod 'Runtime', :git => 'https://github.com/wickwirew/Runtime.git'
 
   target 'Storage_Tests' do
     inherit! :search_paths
+  end
+end
 
-    
+post_install do |installer|
+  installer.pods_project.targets.each do |target|
+    target.build_configurations.each do |config|
+      config.build_settings['MACOSX_DEPLOYMENT_TARGET'] = '10.13'
+      # config.build_settings["EXCLUDED_ARCHS[sdk=iphonesimulator*]"] = "arm64"
+    end
   end
 end
